<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFF"
    tools:context=".myinsta.RegisterActivity">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="208dp"
        android:src="@drawable/appiconnnn" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/edittext_background"
        android:id="@+id/username"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:background="@drawable/edittext_background"
        android:id="@+id/fullname"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/edittext_background"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/edittext_background"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_email"
        android:id="@+id/txt_login"
        android:layout_marginTop="10dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signG"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        ></com.google.android.gms.common.SignInButton>









</LinearLayout>