<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#FFF"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/appiconnnn"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_gravity="start">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/emailimage">
    </ImageView>

    <EditText
        android:id="@+id/email"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="start" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/passwordimage">
        </ImageView>

        <EditText
            android:id="@+id/password"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/log_in"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_have_email"
        android:id="@+id/txt_signup"
        android:layout_marginTop="10dp"/>



    <com.google.android.gms.common.SignInButton
        android:id="@+id/signG"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        ></com.google.android.gms.common.SignInButton>





</LinearLayout>